--- a/style/main.css
+++ b/style/main.css
@@ -58,7 +58,7 @@
         margin-bottom: 2em;
     }
     .card--marketer .card__big {
-        font-size: 2.2em;
+        font-size: 2.2rem;
         margin-bottom: 0.5em;
     }
     .card--marketer .card__kindaBig {
